@@ -148,9 +148,6 @@ allprojects {
         // set heap size for the test JVM(s)
         minHeapSize = "256m"
         maxHeapSize = "512m"
-
-        // set JVM arguments for the test JVM(s)
-        jvmArgs '-XX:MaxPermSize=256m'
     }
 
 }
